--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-session": "^5.10.2",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^12.12.6",
     "jsonwebtoken": "^8.5.1",
     "koa-jwt": "^4.0.0",
+    "koa-session": "^6.0.0",
     "nodemon": "^2.0.2",
+    "svg-captcha": "^1.4.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
