--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "devDependencies": {
     "@koa/router": "^8.0.8",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa": "2.0.49",
+    "@types/koa": "^2.0.50",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-session": "^5.10.2",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^12.12.6",
     "jsonwebtoken": "^8.5.1",
     "koa-jwt": "^4.0.0",
+    "koa-logger": "^3.2.1",
     "koa-session": "^6.0.0",
     "nodemon": "^2.0.2",
     "svg-captcha": "^1.4.0",
